# ACREDIA-STELLAR

./: .gitignore  .gitleaks.toml  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  secret-scan.yml
contracts/: .gitignore  Cargo.toml  Makefile  README.md
contracts/src/: lib.rs
contracts/test_snapshots/tests/: test_authorization_migration.1.json  test_bump_credential_extends_ttl.1.json  test_bump_credential_not_found.1.json  test_credential_issued_event.1.json  test_credential_revoked_event.1.json  test_credential_survives_large_ledger_advance.1.json  test_double_revoke_rejected.1.json  test_duplicate_hash_rejected.1.json  test_get_credential_not_found.1.json  test_initialize_once.1.json  test_issue_and_verify.1.json  test_issuer_authorized_event.1.json  test_issuer_revoked_event.1.json  test_revoke_credential.1.json  test_revoked_credential_survives_large_ledger_advance.1.json  test_total_credentials.1.json  test_unauthorized_issuer_rejected.1.json  test_unauthorized_revoker_rejected.1.json
frontend/: .env.local.example  .gitignore  .prettierignore  .prettierrc  AUTH_FLOW.md  AUTH_QA.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  test_simulate.mjs  vitest.config.ts
frontend/sql/: FIX_DATABASE_RLS.sql  FULL_SETUP.sql  README.md  STUDENT_DASHBOARD_FIX.sql  add_credential_hash_metadata.sql  add_profiles_table.sql  database_schema.sql  enable_admin_stats.sql  secure_rls_migration.sql  (+2 more)
(+88 files in other folders)
