[package]
name = "acredia-stellar"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "20.3.0"

[dev-dependencies]
soroban-sdk = { version = "20.3.0", features = ["testutils"] }

[lib]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1

[profile.release]
opt-level = "z"
overflow-checks = false
lto = true
codegen-units = 1
strip = true
