[package]
name = "acredia-stellar"
version = "1.0.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "=26.0.1"

[dev-dependencies]
# Keep these aligned; newer derive_arbitrary emits try_size_hint APIs missing from arbitrary 1.3.x.
arbitrary = { version = "=1.3.2", features = ["derive"] }
derive_arbitrary = "=1.3.2"
soroban-sdk = { version = "=26.0.1", features = ["testutils"] }

[lib]
crate-type = ["cdylib", "rlib"]

# Suppress false-positive cfg warnings from Soroban SDK macros (testutils feature gate)
[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("testutils"))'] }

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = false
lto = true
codegen-units = 1
strip = true
